prow/ghproxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: ghproxy
  labels:
    app: ghproxy
spec:
  selector:
    matchLabels:
      app: ghproxy
  replicas: 1  # TODO(fejta): this should be HA
  template:
    metadata:
      labels:
        app: ghproxy
    spec:
      containers:
      - name: ghproxy
        image: ghcr.io/tektoncd/plumbing/k8s-prow/ghproxy:v20220329-dee3fed4fa
        args:
        - --cache-dir=/cache
        - --cache-sizeGB=99
        - --serve-metrics=false
        - --legacy-disable-disk-cache-partitions-by-auth-header=false
        ports:
        - name: main
          containerPort: 8888
        - name: metrics
          containerPort: 9090
        volumeMounts:
        - name: cache
          mountPath: /cache
      volumes:
      - name: cache
        persistentVolumeClaim:
          claimName: ghproxy
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ghproxy
  namespace: default
  name: ghproxy
spec:
  ports:
  - name: main
    port: 80
    protocol: TCP
    targetPort: 8888
  - name: metrics
    port: 9090
  selector:
    app: ghproxy
  type: ClusterIP
