prow/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/acme-http01-edit-in-place: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: ing
  namespace: default
spec:
  tls:
  - secretName: prow-tekton-dev-tls
    hosts:
    - prow.tekton.dev
  rules:
  - http:
      paths:
      - backend:
          serviceName: deck
          servicePort: 80
        path: /*
      - backend:
          serviceName: hook
          servicePort: 8888
        path: /hook
